--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,8 +36,8 @@ services:
     volumes:
       - mysql:/var/lib/mysql
       - './.docker/mysql/:/docker-entrypoint-initdb.d/'
-    ports:        # only for development
-      - 3306:3306 #
+    # ports:        # only for development
+    #   - 3306:3306 #
     networks:
       - backend
 volumes:
